--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,38 @@
+:root {
+    --blue: #1FA2F1;
+    --buttonHoverBg: #d4edff;
+}
+
+a {
+    color: inherit;
+}
+
 nav {
-    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: 100%;
+}
+
+nav a {
+padding: 10px; 
+font-size: 30px; 
+width: 55px;
+height: 55px;
+display: flex;
+align-items: center;  
+justify-content: center;   
+text-decoration: none;
+}
+
+nav a.blue {
+    color: var(--blue);
+}
+
+nav a:hover {
+    background-color: var(--buttonHoverBg);
+    color: var(--blue);
+    border-radius: 50%;
 }
 
 .mainSectionContainer {
