--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -10,13 +10,27 @@ html(dir="rtl" lang="fa")
         .wrapper 
             .row 
                 nav.col-2
-                    span Navbar
+                    a.blue(href="/")
+                        i.fa-brands.fa-twitter
+                    a(href="/")
+                        i.fas.fa-home
+                    a(href="/search")
+                        i.fas.fa-search
+                    a(href="/notification")
+                        i.fas.fa-bell
+                    a(href="/messages")
+                        i.fas.fa-envelope
+                    a(href="/profile")
+                        i.fas.fa-user
+                    a(href="/logout")
+                        i.fas.fa-sign-out-alt
                 .mainSectionContainer.col-10.col-md-8
                     block content
-                .d-none.d-md-block.col-md-2
+                .d-none.d-md-block.col-md-2.col-lg-4
                     span third column
 
 
+        script(src='https://kit.fontawesome.com/a99f25cefe.js', crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.7.1.min.js', integrity='sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js', integrity='sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js', integrity='sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r', crossorigin='anonymous')
