--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,24 @@
 :root {
     --blue: #1FA2F1;
+    --blueLight: #9BD1F9;
     --buttonHoverBg: #d4edff;
+    --lightGrey: rgb(230, 236, 240);
+    --spacing: 15px;
+
+}
+
+* {
+    outline: none !important;
 }
 
 a {
     color: inherit;
+}
+
+h1 {
+    font-size: 19px;
+    font-weight: 800;
+    margin: 0;
 }
 
 nav {
@@ -23,6 +37,7 @@ display: flex;
 align-items: center;  
 justify-content: center;   
 text-decoration: none;
+color: #212529;
 }
 
 nav a.blue {
@@ -36,5 +51,64 @@ nav a:hover {
 }
 
 .mainSectionContainer {
-    background-color: blue;
+    padding: 0;
+    border-left: 1px solid var(--lightGrey);
+    border-right: 1px solid var(--lightGrey);
+    display: flex;
+    flex-direction: column;
+}
+
+.titleContainer {
+    height: 53px;
+    padding: 0 var(--spacing);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--lightGrey);
+    flex-shrink: 0;
+}
+
+.titleContainer h1 {
+    flex: 1;
+}
+
+.postFormContainer {
+    display: flex;
+    padding: var(--spacing);
+    border-bottom: 10px solid rgb(230, 236, 240);
+    flex-shrink: 0;
+}
+
+.userImageContainer {
+    width: 50px;
+    height: 50px;
+}
+
+.userImageContainer img {
+    width: 100%;
+    border-radius: 50%;
+    background: white;
+}
+
+.textareaContainer {
+    flex: 1;
+    padding-right: var(--spacing);
+}
+
+.textareaContainer textarea {
+    width: 100%;
+    border: none;
+    resize: none;
+    font-size: 19px;
+}
+
+#submitPostButton {
+    background-color: var(--blue);
+    color: white;
+    border: none;
+    border-radius: 40px;
+    padding: 7px 15px;
+}
+
+#submitPostButton:disabled {
+    background-color: var(--blueLight);
 }
