--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,5 @@
+include ../mixins/mixins
+
 doctype html
 html(dir="rtl" lang="fa")
     head
@@ -24,7 +26,9 @@ html(dir="rtl" lang="fa")
                         i.fas.fa-user
                     a(href="/logout")
                         i.fas.fa-sign-out-alt
-                .mainSectionContainer.col-10.col-md-8
+                .mainSectionContainer.col-10.col-md-8.col-lg-6
+                    .titleContainer 
+                        h1 #{pageTitle}
                     block content
                 .d-none.d-md-block.col-md-2.col-lg-4
                     span third column
