--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -31,7 +31,7 @@ html(dir="rtl" lang="fa")
                         h1 #{pageTitle}
                     block content
                 .d-none.d-md-block.col-md-2.col-lg-4
-                    span third column
+                    
 
 
         script(src='https://kit.fontawesome.com/a99f25cefe.js', crossorigin='anonymous')
@@ -39,3 +39,6 @@ html(dir="rtl" lang="fa")
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js', integrity='sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js', integrity='sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js', integrity='sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa', crossorigin='anonymous')
+
+
+        script(src="/js/common.js")
