--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,13 @@ block content
 
             p.errorMessage #{errorMessage}
 
-            input(type="text", name="logUsername", placeholder="نام کاربری", value=logUsername required="")
-            input(type="password", name="logPassword", placeholder="رمز عبور", required="")
+            //- input(type="text", name="logUsername", placeholder="نام کاربری", value=logUsername required="")
+            //- input(type="password", name="logPassword", placeholder="رمز عبور", required="")
+
+
+            input(type="text", name="logUsername", placeholder="نام کاربری", value="Chan" required="")
+            input(type="password", name="logPassword", placeholder="رمز عبور", value="111" required="")
+
+
             input(type="submit", value="ورود")
         a(href="/register") نیاز به یک حساب کاربری دارید؟ اینجا ثبت نام کنید 
