--- a/views/home.pug
+++ b/views/home.pug
@@ -3,3 +3,7 @@ extends layouts/main-layout.pug
 block content
     +creatPostForm(userLoggedIn)
     .postsContainer
+    
+
+block scripts 
+    script(src="/js/home.js")
